--- a/scene/zero/index.html
+++ b/scene/zero/index.html
@@ -27,22 +27,22 @@
 
 </head>
 
-<body class="fadein lang" id="dark">
+<body class="fadein" id="dark">
 
   <nav>
     <ul class="page">
       <li class="crumb logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark &ndash; Light &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb scene"><a><i>White Rhino</i></a></li>
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français."><font class="en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français."><font class="en">fr</font><font class="fr">en</font></a></li>
     </ul>
   </nav>
 
   <header>
     <div class="quote text-center">
       <h1 class="title">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></h1>
-      <h3>Scene zero:<font class="fr">&nbsp;&#92;&nbsp;Scène zèro&nbsp;:</font></h3>
-      <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace"> </font><font class="thin">Rhino</font></a></h1>
-      <h3><font class="color-reset">Oil painting of a red horizon.</font><font class="fr">&nbsp;&#92;&nbsp;Peinture à l’huile d’un horizon en flammes.</font></h3>
+      <h3><font class="en">Scene zero:</font><font class="fr">Scène zèro&nbsp;:</font></h3>
+      <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();"><font class="en">White<font class="letterspace"> </font><font class="thin">Rhino</font></font><font class="fr"><font class="thin">Rhinocéros</font><font class="letterspace"> </font>Blanc</font></a></h1>
+      <h3><font class="color-reset"><font class="en">Oil painting of a red horizon.</font></font><font class="fr">Peinture à l’huile d’un horizon en flammes.</font></h3>
     </div>
   </header>
 
@@ -54,7 +54,7 @@
             <img alt="Animat Habitat scene zero: White Rhino oil painting, 2007. &copy; Dane Aleksander"  class="matte-preview" src="../../inc/img/boutique/00/white-rhino.2007.480-160.jpg" />
 
           </div>
-          <p><i>White Rhino</i>, Ngorongoro Conservation Area<font class="fr">&nbsp;&#92;&nbsp;Zone de conservation de Ngorongoro</font>, Tanzania<font class="fr">&nbsp;&#92;&nbsp;Tanzanie</font> (oil paint<font class="fr">&nbsp;&#92;&nbsp;peinture à l'huile</font>, 2007) &copy; Dane Aleksander</p>
+          <p><i>White Rhino</i>, <font class="en">Ngorongoro Conservation Area</font><font class="fr">Zone de conservation de Ngorongoro</font>, <font class="en">Tanzania</font><font class="fr">Tanzanie</font> (<font class="en">oil paint</font><font class="fr">&nbsp;peinture à l'huile</font>, 2007<font class="fr">&nbsp;</font>) &copy; Dane Aleksander</p>
 
         </div>
       </section>
@@ -77,28 +77,28 @@
     <section class="product single" id="scene">
 
       <div>
-        <h5 class="color"><a class="color overscore" onclick="toggle_meta();">Oil Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture à l'huile</font></h5>
+        <h5 class="color"><a class="color overscore" onclick="toggle_meta();"><font class="en">Oil Painting</font><font class="fr">Peinture à l'huile</font></a></h5>
         <div class="clear" id="product-meta">
-          <p class="small">Painted with Pébéo oil colors on canvas.<font class="fr">&nbsp;&#92;&nbsp;Peint avec des couleurs à l'huile Pébéo sur toile.</font></p>
-          <h5 class="author">Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</h5>
+          <p class="small"><font class="en">Painted with Pébéo oil colors on canvas.</font><font class="fr">Peint avec des couleurs à l'huile Pébéo sur toile.</font></p>
+          <h5 class="author">Art <font class="en">by</font><font class="fr">par</font> Dane Aleksander.</h5>
 
         </div>
 
-        <p class="linebreak"><i>White Rhino</i> is an oil painting that sets a serene landscape in Tanzania in contrast with an endangerment on the horizon for the northern white rhinoceros. The painting is regarded as a formative study at Animat Habitat where it started a conversation about the role we want to play in shaping the world we want to live in.<font class="fr">&nbsp;&#92;&nbsp;<i>Rhinocéros blanc</i> est une peinture à l'huile qui fixe un paysage serein en Tanzanie en contraste avec une menace à l'horizon pour le rhinocéros blanc. La peinture est considérée comme l'étude formative chez Animat Habitat où elle a commencé une conversation sur la façon dont nous voulons façonner le monde dans lequel nous voulons vivre.</font></p>
+        <p class="linebreak"><font class="en"><i>White Rhino</i> is an oil painting that sets a serene landscape in Tanzania in contrast with an endangerment on the horizon for the northern white rhinoceros. The painting is regarded as a formative study at Animat Habitat where it started a conversation about the role we want to play in shaping the world we want to live in.</font><font class="fr"><i>Rhinocéros blanc</i> est une peinture à l'huile qui fixe un paysage serein en Tanzanie en contraste avec une menace à l'horizon pour le rhinocéros blanc. La peinture est considérée comme l'étude formative chez Animat Habitat où elle a commencé une conversation sur la façon dont nous voulons façonner le monde dans lequel nous voulons vivre.</font></p>
 
-        <p class="linebreak">Exhibited in April<font class="fr">&nbsp;&#92;&nbsp;Exposé en avril</font> 2007.</p>
+        <p class="linebreak"><font class="en">Exhibited in April</font><font class="fr">Exposé en avril</font> 2007.</p>
 
       </div>
 
       <div class="clear diptych">
 
         <div class="clear-bottom">
-          <h5><a class="overscore" onclick="toggle_0000_0011();">Oil Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture à l'huile</font></h5>
+          <h5><a class="overscore" onclick="toggle_0000_0011();"><font class="en">Oil Painting</font><font class="fr">Peinture à l'huile</font></a></h5>
           <div class="clear" id="product-0000-0011">
             <p><font class="sku small">0000 0011</font></p>
 
           </div>
-          <p>Dimension: 30&nbsp;&times;&nbsp;10 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+          <p>Dimension: 30&nbsp;&times;&nbsp;10 <font class="en">in</font><font class="fr">po</font></p>
 
         </div>
 
@@ -110,7 +110,7 @@
 
   <div class="clear">
     <div class="quote clear-bottom text-center">
-      <h2>Project Broadcast<font class="fr">&nbsp;&#92;&nbsp;Mises à jour du projet</font></h2>
+      <h2><font class="en">Project Broadcast</font><font class="fr">Mises à jour du projet</font></h2>
     </div>
 
   </div>
@@ -132,7 +132,7 @@
   <div class="clear color">
     <section class="single">
       <div class="quote text-center">
-        <h4><i>Do not speak of a rhinoceros if there is no tree nearby.</i><font class="fr thin">&nbsp;&#92;&nbsp;<i>Ne parlez pas de rhinocéros s'il n'y a pas d'arbre à proximité.</i></font><br><font class="color small thin">&mdash;&nbsp;Zulu proverb</font><font class="fr small thin">&nbsp;&#92;&nbsp;proverbe zoulou</font></h4>
+        <h4><i><font class="en">Do not speak of a rhinoceros if there is no tree nearby.</font><font class="fr">Ne parlez pas de rhinocéros s'il n'y a pas d'arbre à proximité.</font></i><br><font class="color small thin">&mdash;&nbsp;<font class="en">Zulu proverb</font><font class="fr small thin">proverbe zoulou</font></h4>
 
       </div>
     </section>
