--- a/conservation/afrique/index.html
+++ b/conservation/afrique/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="wildlife conservation africa, wildlife conservation kenya, wildlife conservation botswana, wildlife conservation namibia, wildlife conservation angola" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat conservation. Africa, Afrique.</title>
+  <title>Animat Habitat conservation. Afrique.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../inc/css/dark.light.unicorn.css" />
