--- a/conservation/turtle-island/index.html
+++ b/conservation/turtle-island/index.html
@@ -37,11 +37,7 @@
       <div>
         <h4 class="letterhead title thin">Habitat Conservation</h4>
         <h2>Turtle Island</h2>
-        <p><i>
-
-          Canada and the United States of America share an outsized responsibility to address climate change and global inequality, at the same time. Our American dream must dare to limit global warming to no more than two degrees Celsius above average pre-industrial surface temperatures, beyond which natural systems on Earth are tipped to unravel. Climate action by Canadians and Americans, alike, must call on institutional and political support for Indigenous stewardships of land across Turtle Island, then carry out financial and technological support of underdeveloped infrastructure in developing nations around the world.
-
-        </i></p>
+        <p><i>Canada and the United States of America share an outsized responsibility to address climate change and global inequality, at the same time. Our American dream must dare to limit global warming to no more than two degrees Celsius above the average pre-industrial surface temperatures, beyond which natural systems on Earth are tipped to unravel. Climate action by Canadians and Americans, alike, must call on institutional and political support for Indigenous stewardships of land across Turtle Island, then carry out financial and technological support of underdeveloped infrastructure in developing nations around the world.</i></p>
 
         <div>
 
@@ -54,8 +50,6 @@
         </div>
 
         <p><i>Indigenous land stewardships account for around eighty per cent of biodiversity on Earth, however, Indigenous communities constitute only around five per cent of the people on the planet. Many aboriginal and traditional ways of life in the world, today, are on the verge of vanishing&hellip; Animat Habitat has recognized Indigenous land stewardships and select wildlife conservation organizations working with Indigenous communities to protect and restore nature across Turtle Island.</i></p>
-
-        <!-- from providing healthcare to creating economic opportunities that do not jeopardize the right to engage in traditional ways of life -->
 
       </div>
 
