--- a/conservation/ile-de-la-tortue/index.html
+++ b/conservation/ile-de-la-tortue/index.html
@@ -54,9 +54,9 @@
 
           <h5><font class="overscore">Comités de conservation</font></h5>
           <ul>
-            <li><a href="../../url/-ca/cosewic/" title="COSEWIC" target="_blank">Commitee on the Status of Endangered Wildlife</a>, <i>Canada</i></li>
+            <li><a href="../../url/-ca/cosewic/" title="Commitee on the Status of Endangered Wildlife in Canada (&nbsp;COSEWIC&nbsp;), Comité sur la situation des espèces en péril au Canada (&nbsp;COSEPAC&nbsp;)" target="_blank">Comité sur la situation des espèces en péril</a>, <i>Canada</i></li>
 
-            <li><a href="../../url/-mx/gob-biodiversidad/" title="CONABIO" target="_blank">Comisión Nacional para el Conocimiento y Uso de la Biodiversidad</a>, <i>México</i></li>
+            <li><a href="../../url/-gob-mx/biodiversidad/" title="CONABIO" target="_blank">Comisión Nacional para el Conocimiento y Uso de la Biodiversidad</a>, <i>México</i></li>
 
           </ul>
 
@@ -67,9 +67,9 @@
 
             <h5><font class="overscore">Conservation au Canada</font></h5>
             <ul>
-              <li><a href="../../url/-org/cwf-fcf/" title="CWF" target="_blank">Canadian Wildlife Federation</a></li>
+              <li><a href="../../url/-org/cwf-fcf-fr/" title="Fédération canadienne de la faune (&nbsp;FCF&nbsp;)" target="_blank">Fédération canadienne de la faune</a></li>
 
-              <li><a href="../../url/-ca/sierraclub/" title="Sierra Club" target="_blank">Sierra Club Canada Foundation</a></li>
+              <li><a href="../../url/-ca/sierraclub-fr/" title="Sierra Club Canada" target="_blank">Sierra Club Canada Foundation</a></li>
 
             </ul>
 
@@ -84,7 +84,7 @@
 
             <h5 class="linebreak"><font class="overscore">Conservation au Mexique</font></h5>
             <ul>
-              <li><a href="../../url/-org/fmcn/" title="Fondo Mexicano para la Conservación de la Naturaleza (FMCN)" target="_blank">Fondo Mexicano para la Conservación de la Naturaleza</a></li>
+              <li><a href="../../url/-org/fmcn-es/" title="Fondo Mexicano para la Conservación de la Naturaleza (FMCN)" target="_blank">Fondo Mexicano para la Conservación de la Naturaleza</a></li>
 
             </ul>
 
