--- a/conservation/turtle-island/index.html
+++ b/conservation/turtle-island/index.html
@@ -59,9 +59,9 @@
 
           <h5><font class="overscore">Committees on Conservartion</font></h5>
           <ul>
-            <li><a href="../../url/-ca/cosewic/" title="COSEWIC" target="_blank">Commitee on the Status of Endangered Wildlife</a>, <i>Canada</i></li>
+            <li><a href="../../url/-ca/cosewic/" title="Commitee on the Status of Endangered Wildlife in Canada (COSEWIC)" target="_blank">Commitee on the Status of Endangered Wildlife</a>, <i>Canada</i></li>
 
-            <li><a href="../../url/-mx/gob-biodiversidad/" title="CONABIO" target="_blank">Comisión Nacional para el Conocimiento y Uso de la Biodiversidad</a>, <i>México</i></li>
+            <li><a href="../../url/-gob-mx/biodiversidad/" title="Comisión Nacional para el Conocimiento y Uso de la Biodiversidad (CONABIO)" target="_blank">Comisión Nacional para el Conocimiento y Uso de la Biodiversidad</a>, <i>México</i></li>
 
           </ul>
 
@@ -72,7 +72,7 @@
 
             <h5><font class="overscore">Conservation in Canada</font></h5>
             <ul>
-              <li><a href="../../url/-org/cwf-fcf/" title="CWF" target="_blank">Canadian Wildlife Federation</a></li>
+              <li><a href="../../url/-org/cwf-fcf-en/" title="Canadian Wildlife Federation (CWF)" target="_blank">Canadian Wildlife Federation</a></li>
 
               <li><a href="../../url/-ca/sierraclub/" title="Sierra Club" target="_blank">Sierra Club Canada Foundation</a></li>
 
