--- a/conservation/ile-de-la-tortue/index.html
+++ b/conservation/ile-de-la-tortue/index.html
@@ -566,9 +566,11 @@
 
 
 
-            <p class="letterhead small">Il existe un certain nombre de parcs nationaux et de réserves non répertoriés dans les provinces et territoires où ceux-ci se superposent à ceux répertoriés dans les sites patrimoniaux.</p>
+            <p class="letterhead letterend small">Il existe un certain nombre de parcs nationaux et de réserves non répertoriés dans les provinces et territoires où ceux-ci se superposent à ceux répertoriés dans les sites patrimoniaux.</p>
 
           </div>
+
+
 
           <div>
 
