--- a/conservation/turtle-island/index.html
+++ b/conservation/turtle-island/index.html
@@ -585,7 +585,7 @@
 
 
 
-            <p class="letterhead small">There are a number of national parks and reserves not listed in the provinces and territories where these overlay those listed in the heritage sites.</p>
+            <p class="letterhead letterend small">There are a number of national parks and reserves not listed in the provinces and territories where these overlay those listed in the heritage sites.</p>
 
           </div>
 
