--- a/conservation/ile-de-la-tortue/index.html
+++ b/conservation/ile-de-la-tortue/index.html
@@ -543,7 +543,7 @@
 
             </div>
 
-            <p class="linebreak small">En savoir plus sur les habitats protégées en vertu de la Loi sur les parcs nationaux du Canada, administrée par <a href="../../url/-ca/parcs/canada/" title="Gouvernement du Canada / Parcs Canada" target="_blank">Parcs Canada</a> sous la juridiction du ministère de l’Environnement et du Changement climatique du Canada.</p>
+            <p class="linebreak small">Il existe un certain nombre de parcs nationaux et de réserves non répertoriés dans les provinces et territoires où ceux-ci se superposent à ceux répertoriés dans les sites patrimoniaux. En savoir plus sur les habitats protégées en vertu de la Loi sur les parcs nationaux du Canada, administrée par <a href="../../url/-ca/parcs/canada/" title="Gouvernement du Canada / Parcs Canada" target="_blank">Parcs Canada</a> sous la juridiction du ministère de l’Environnement et du Changement climatique du Canada.</p>
 
             <h5 class="linebreak"><font class="overscore">Canada</font> &ndash; <font class="overscore">États-Unis</font></h5>
             <ul>
@@ -562,11 +562,7 @@
 
 
             <h5 class="linebreak"><font class="overscore">México</font></h5>
-            <p class="small">Publicado pronto.</p>
-
-
-
-            <p class="letterhead letterend small">Il existe un certain nombre de parcs nationaux et de réserves non répertoriés dans les provinces et territoires où ceux-ci se superposent à ceux répertoriés dans les sites patrimoniaux.</p>
+            <p class="letterend small">Publicado pronto.</p>
 
           </div>
 
