--- a/conservation/ile-de-la-tortue/index.html
+++ b/conservation/ile-de-la-tortue/index.html
@@ -108,7 +108,7 @@
 
               <li><a href="../../url/unesco/1686/" title="UNESCO #1686" target="_blank">Anticosti</a>&nbsp; <i>QC</i></li>
 
-              <li><a href="../../url/unesco/304/" title="UNESCO #304" target="_blank">Parcs des montagnes Rocheuses canadiennes</a>&nbsp; <i>AB-BC</i></li>
+              <li><a href="../../url/unesco/304/" title="UNESCO #304" target="_blank">Parcs des montagnes Rocheuses</a>&nbsp; <i>AB-BC</i></li>
 
               <li><a href="../../url/unesco/419/" title="UNESCO #419" target="_blank">Parc national du Gros Morne</a>&nbsp; <i>NL</i></li>
 
@@ -543,14 +543,14 @@
 
             </div>
 
-            <p class="linebreak small">Il existe un certain nombre de parcs nationaux et de réserves non répertoriés dans les provinces et territoires où ceux-ci se superposent à ceux répertoriés dans les sites patrimoniaux. En savoir plus sur les habitats protégées en vertu de la Loi sur les parcs nationaux du Canada, administrée par <a href="../../url/-ca/parcs/canada/" title="Gouvernement du Canada / Parcs Canada" target="_blank">Parcs Canada</a> sous la juridiction du ministère de l’Environnement et du Changement climatique du Canada.</p>
+            <p class="linebreak small">Il existe un certain nombre de parcs nationaux et de réserves non répertoriés dans les provinces et territoires où ceux-ci se superposent à ceux répertoriés dans les sites patrimoniaux. En savoir plus sur les habitats protégées en vertu de la Loi sur les parcs nationaux du Canada administrée par <a href="../../url/-ca/parcs/canada/" title="Gouvernement du Canada / Parcs Canada" target="_blank">Parcs Canada</a> sous la juridiction du ministère de l’Environnement et du Changement climatique du Canada.</p>
 
             <h5 class="linebreak"><font class="overscore">Canada</font> &ndash; <font class="overscore">États-Unis</font></h5>
             <ul>
 
               <li><a href="../../url/unesco/72/" title="UNESCO #72" target="_blank">Kluane &ndash; Wrangell-St Elias &ndash; Glacier Bay &ndash; Tatshenshini-Alsek</a>&nbsp; <i>AK-BC-YT</i></li>
 
-              <li><a href="../../url/unesco/354/" title="UNESCO #354" target="_blank">Parc international de la paix Waterton-Glacier</a>&nbsp; <i>AB-MT</i></li>
+              <li><a href="../../url/unesco/354/" title="UNESCO #354" target="_blank">Parc de la paix Waterton-Glacier</a>&nbsp; <i>AB-MT</i></li>
 
             </ul>
 
