--- a/conservation/ile-de-la-tortue/index.html
+++ b/conservation/ile-de-la-tortue/index.html
@@ -108,21 +108,21 @@
 
               <li><a href="../../url/unesco/1686/" title="UNESCO #1686" target="_blank">Anticosti</a>&nbsp; <i>QC</i></li>
 
-              <li><a href="../../url/unesco/304/" title="UNESCO #304" target="_blank">Parcs des montagnes Rocheuses</a>&nbsp; <i>AB-BC</i></li>
+              <li><a href="../../url/unesco/304/" title="UNESCO #304" target="_blank">Parcs des montagnes Rocheuses</a>&nbsp; <i>AB-CB</i></li>
 
-              <li><a href="../../url/unesco/419/" title="UNESCO #419" target="_blank">Parc national du Gros Morne</a>&nbsp; <i>NL</i></li>
+              <li><a href="../../url/unesco/419/" title="UNESCO #419" target="_blank">Parc national du Gros Morne</a>&nbsp; <i>TNL</i></li>
 
-              <li><a href="../../url/unesco/157/" title="UNESCO #157" target="_blank">S<font class="underscore">G</font>ang Gwaay</a><sup>&nbsp;[&nbsp;<a class="button" onclick="fn();" title="Aire marine nationale de conservation (&nbsp;AMNC&nbsp;)">1</a>,&nbsp;<a class="button" onclick="fn();" title="Aire marine nationale de conservation (&nbsp;AMNC&nbsp;) &ndash; réserve">2</a>&nbsp;]</sup>&nbsp; <i>BC</i></li>
+              <li><a href="../../url/unesco/157/" title="UNESCO #157" target="_blank">S<font class="underscore">G</font>ang Gwaay</a><sup>&nbsp;[&nbsp;<a class="button" onclick="fn();" title="Aire marine nationale de conservation (&nbsp;AMNC&nbsp;)">1</a>,&nbsp;<a class="button" onclick="fn();" title="Aire marine nationale de conservation (&nbsp;AMNC&nbsp;) &ndash; réserve">2</a>&nbsp;]</sup>&nbsp; <i>CB</i></li>
 
-              <li><a href="../../url/unesco/1285/" title="UNESCO #1285" target="_blank">Falaises fossilifères de Joggins</a>&nbsp; <i>NS</i></li>
+              <li><a href="../../url/unesco/1285/" title="UNESCO #1285" target="_blank">Falaises fossilifères de Joggins</a>&nbsp; <i>NÉ</i></li>
 
               <li><a href="../../url/unesco/686/" title="UNESCO #686" target="_blank">Parc national de Miguasha</a>&nbsp; <i>QC</i></li>
 
-              <li><a href="../../url/unesco/24/" title="UNESCO #24" target="_blank">Réserve de parc national de Nahanni</a>&nbsp; <i>NT</i></li>
+              <li><a href="../../url/unesco/24/" title="UNESCO #24" target="_blank">Réserve de parc national de Nahanni</a>&nbsp; <i>TNO</i></li>
 
               <li><a href="../../url/unesco/1415/" title="UNESCO #1415" target="_blank">Pimachiowin Aki</a>&nbsp; <i>MB-ON</i></li>
 
-              <li><a href="../../url/unesco/256/" title="UNESCO #256" target="_blank">Parc national Wood Buffalo</a>&nbsp; <i>AB-NT</i></li>
+              <li><a href="../../url/unesco/256/" title="UNESCO #256" target="_blank">Parc national Wood Buffalo</a>&nbsp; <i>AB-TNO</i></li>
 
             </ul>
 
@@ -548,7 +548,7 @@
             <h5 class="linebreak"><font class="overscore">Canada</font> &ndash; <font class="overscore">États-Unis</font></h5>
             <ul>
 
-              <li><a href="../../url/unesco/72/" title="UNESCO #72" target="_blank">Kluane &ndash; Wrangell-St Elias &ndash; Glacier Bay &ndash; Tatshenshini-Alsek</a>&nbsp; <i>AK-BC-YT</i></li>
+              <li><a href="../../url/unesco/72/" title="UNESCO #72" target="_blank">Kluane &ndash; Wrangell-St Elias &ndash; Glacier Bay &ndash; Tatshenshini-Alsek</a>&nbsp; <i>AK-CB-YT</i></li>
 
               <li><a href="../../url/unesco/354/" title="UNESCO #354" target="_blank">Parc de la paix Waterton-Glacier</a>&nbsp; <i>AB-MT</i></li>
 
