--- a/conservation/turtle-island/index.html
+++ b/conservation/turtle-island/index.html
@@ -558,7 +558,7 @@
 
             </div>
 
-            <p class="linebreak small">There are a number of national parks and reserves not listed in the provinces and territories where these overlay those listed in the heritage sites. More habitats protected under the <i>Canada National Parks Act</i> administered by <a href="../../url/-ca/parks/canada/" title="Government of Canada / Parks Canada" target="_blank">Parks Canada</a> under the jurisdiction of the Ministry of Environment and Climate Change, Canada.</p>
+            <p class="linebreak small">There are a number of national parks and reserves not listed in the provinces and territories where these overlay those listed in the heritage sites. More habitats protected under the <i>Canada National Parks Act</i>, and administered by <a href="../../url/-ca/parks/canada/" title="Government of Canada / Parks Canada" target="_blank">Parks Canada</a> under the jurisdiction of the Department of Environment and Climate Change, Canada (ECCC).</p>
 
 
 
