--- a/conservation/turtle-island/index.html
+++ b/conservation/turtle-island/index.html
@@ -891,7 +891,7 @@
               <ul class="small">
                 <li>First Nation of Nacho Nyak Dun (1995) [<a href="../../url/fn/nnd/" title="First Nation of Nacho Nyak Dun (NNDFN)" target="_blank">nndfn.com</a>]</li>
 
-                <li>Champagne and Aishihik First Nation (1995) [<a href="../../url/fn/ca/" title="Champagne and Aishihik First Nations (CAFN)" target="_blank">cafn.ca</a>]</li>
+                <li>Champagne and Aishihik First Nations (1995) [<a href="../../url/fn/ca/" title="Champagne and Aishihik First Nations (CAFN)" target="_blank">cafn.ca</a>]</li>
 
                 <li>Vuntut Gwich'in First Nation (1995) [<a href="../../url/fn/vg/" title="Vuntut Gwich'in First Nation (VGFN)" target="_blank">vgfn.ca</a>]</li>
 
@@ -994,7 +994,7 @@
               <p class="linebreak small title">British Columbia Treaties<sup>&nbsp;[<a class="button" onclick="fn();" title="Treaty Negotiations in British Columbia">8</a>]</sup></p>
               <ul class="small">
 
-                <!-- Champagne and Aishihik First Nations (CAFN)  //cafn.ca -->
+                <!-- Champagne and Aishihik First Nations (CAFN)  See Yukon -->
 
                 <!-- Da'naxda'xw First Nation -->
 
