--- a/conservation/ile-de-la-tortue/index.html
+++ b/conservation/ile-de-la-tortue/index.html
@@ -766,7 +766,7 @@
 
               <p class="linebreak small title">Traités modernes au Yukon<sup>&nbsp;[&nbsp;<a class="button" onclick="fn();" title="Traités modernes">7</a>&nbsp;]</sup></p>
               <ul class="small">
-                <li>First Nation of Nacho Nyak Dun (&nbsp;1995&nbsp;) [<a href="../../url/fn/nnd/" title="First Nation of Nacho Nyak Dun (NNDFN)" target="_blank">nndfn.com</a>]</li>
+                <li>Première Nation des Nacho Nyak Dun (&nbsp;1995&nbsp;) [<a href="../../url/fn/nnd/" title="First Nation of Nacho Nyak Dun (NNDFN)" target="_blank">nndfn.com</a>]</li>
 
                 <li>Première Nations Champagne et Aishihik (&nbsp;1995&nbsp;) [<a href="../../url/fn/ca/" title="Première Nations Champagne et Aishihik" target="_blank">cafn.ca</a>]</li>
 
@@ -824,7 +824,7 @@
 
                 <li>Première Nation Songhees</li>
 
-                <li>Nation T'sou-ke</li>
+                <li>Première Nation T'sou-ke</li>
 
               </ul>
 
