--- a/conservation/turtle-island/index.html
+++ b/conservation/turtle-island/index.html
@@ -984,7 +984,7 @@
 
                 -->
 
-                <li>T'sou-ke Nation</li>
+                <li>T'sou-ke First Nation</li>
 
               </ul>
 
