--- a/conservation/ile-de-la-tortue/index.html
+++ b/conservation/ile-de-la-tortue/index.html
@@ -849,9 +849,9 @@
 
                 <li>Première Nation Katzie [<a href="../../url/fn/katzie/" title="Première Nation Katzie" target="_blank">katzie.ca</a>]</li>
 
-                <li>K'ómoks, Kwiakah, Tlowitsis &middot; Premières Nations Kwakiutl du Sud</li>
+                <li>K'ómoks, Kwiakah, Tlowitsis &middot; Nations Kwakiutl du Sud</li>
 
-                <li>Ditidaht, Hupačasath, Tla-o-qui-aht &middot; Premières Nations Nuu-chah-nulth</li>
+                <li>Ditidaht, Hupačasath, Tla-o-qui-aht &middot; Nations Nuu-chah-nulth</li>
 
                 <li>Première Nation Quatsino [<a href="../../url/fn/quatsino/" title="Première Nation Quatsino" target="_blank">quatsinofn.com</a>]</li>
 
@@ -859,9 +859,9 @@
 
                 <li>Première Nation Tlingit de Taku River [<a href="../../url/fn/trt/" title="Première Nation Tlingit de Taku River" target="_blank">trtfn.com</a>]</li>
 
-                <li>Lax Kw’Alaams, Tsimshian &middot; Premières Nations Ts’msyen</li>
+                <li>Lax Kw’Alaams, Tsimshian &middot; Nations Ts’msyen</li>
 
-                <li>Sekani, McLeod Lake, Wet’suwet’en &middot; Premières Nations Tse’khene</li>
+                <li>Sekani, McLeod Lake, Wet’suwet’en &middot; Nations Tse’khene</li>
 
                 <li>Nation Tsleil-Waututh [<a href="../../url/fn/tw/" title="Nation Tsleil-Waututh" target="_blank">twnation.ca</a>]</li>
 
